# matomo-bootstrap

./: .gitignore  CHANGELOG.md  Dockerfile  MIRRORS  Makefile  README.md  docker-compose.yml  env.sample  flake.nix  pyproject.toml
.github/workflows/: ci.yml  publish-image.yml  reusable-test.yml  stable-tag.yml
src/matomo_bootstrap/: __init__.py  __main__.py  api_tokens.py  bootstrap.py  cli.py  config.py  health.py  http.py  matomo_api.py
src/matomo_bootstrap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/matomo_bootstrap/install/: container_installer.py  web_installer.py
src/matomo_bootstrap/installers/: web.py
tests/e2e/: docker-compose.slow.yml  docker-compose.yml  test_bootstrap.py  test_bootstrap_nix.py  test_compose_stack_bootstrap.py  test_docker_compose_stack.py
tests/integration/: test_web_installer_locator_count.py  test_web_installer_warnings.py
